# Django_Caching

./: .env.sample  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
Caching_project/: asgi.py  settings.py  urls.py  wsgi.py
MVP_app/: apps.py  urls.py  views.py
templates/: cached_page.html  database_cached_page.html  dummy_cached_page.html  filesystem_cached_page.html  navbar.html  non_cached_page.html  per_view_cached_page.html
