[project]
name = "caching-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Imtbdev",email = "imtbdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "python-memcached (>=1.62,<2.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "pymemcache (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
